--- a/slides/keeping-software-soft.pug
+++ b/slides/keeping-software-soft.pug
@@ -11,7 +11,7 @@ html
   body
     .reveal
       .slides
-        section
+        section(data-background-image=require("./pics/quality-conf.png") data-background-size="cover")
           h2 Keeping Software Soft
           h4
             a(href="https://github.com/proofit404") Artem Malyshev
