--- a/slides/keeping-software-soft.pug
+++ b/slides/keeping-software-soft.pug
@@ -238,8 +238,8 @@ html
             p половина данных переехала в firebase
         section
             h2 Problems
-            h4 we does not have tooling to work with data
-            h4 there is no data contracts writted in code
+            h4 We do not have the tooling to work with data
+            h4 There are no data contracts written in code
             aside.notes
               p в результате отвалилась вся возможность работы с данными
               p проблема: нет явно прописанных правил о данных, которыми живёт проект
@@ -293,7 +293,7 @@ html
           ol
             li.fragment Explicit data contracts and relations in code
             li.fragment Data store independent
-            li.fragment Catch errors when they occurs
+            li.fragment Catch errors when they occur
             li.fragment Not when they propagate to exception
           h2.fragment cons
           ol
