Change about me in all talks.

--- a/slides/ddd-toolkit.pug
+++ b/slides/ddd-toolkit.pug
@@ -18,9 +18,10 @@ html
         section
           h2 BIO
           ul
-            li 5 years of experience in Python
+            li Co-Founder at #[a(href="https://drylabs.io/") drylabs.io]
+            li #[a(href="https://dry-python.org/") dry-python.org]
             li Django Channels 1.0
-            li Dry Python
+            li 5 years of experience in Python
         section
           h2 Complexity
           p.fragment #[b Accidental complexity] refers to challenges that developers unintentionally make for themselves as a result of trying to solve a problem.
