--- a/templates/project-list.html
+++ b/templates/project-list.html
@@ -1,3 +1,6 @@
+{% from 'components/navbar-item.html' import navbar_item as link %}
+{# FIXME: Rename navbar-item to the generic component #}
+
 {% extends 'layout.html' %}
 
 {% block title %}
@@ -10,9 +13,15 @@
     <div>
       <img src="{{ project.logo }}">
       <p>{{ project.description }}</p>
-      <a href="{{ project.github }}">GitHub</a>
-      <a href="{{ project.documentation }}">Documentation</a>
-      <a href="{{ project.gitter }}">Gitter</a>
+      {% call link(project.github) %}
+        GitHub
+      {% endcall %}
+      {% call link(project.documentation) %}
+        Documentation
+      {% endcall %}
+      {% call link(project.gitter) %}
+        Gitter
+      {% endcall %}
     </div>
   {% endfor %}
 {% endblock %}
