Move project card to the separate component.

--- a/templates/project-list.html
+++ b/templates/project-list.html
@@ -1,5 +1,4 @@
-{% from 'components/navbar-item.html' import navbar_item as link %}
-{# FIXME: Rename navbar-item to the generic component #}
+{% from 'components/project-card.html' import project_card %}
 
 {% extends 'layout.html' %}
 
@@ -9,19 +8,6 @@
 
 {% block body %}
   {% for project in this.pagination.items %}
-    {# FIXME: Move to the component. #}
-    <div class="py-4">
-      <img src="{{ project.logo }}">
-      <p>{{ project.description }}</p>
-      {% call link(project.github) %}
-        GitHub
-      {% endcall %}
-      {% call link(project.documentation) %}
-        Documentation
-      {% endcall %}
-      {% call link(project.gitter) %}
-        Gitter
-      {% endcall %}
-    </div>
+    {{ project_card(project) }}
   {% endfor %}
 {% endblock %}
