Correct developer note.

--- a/templates/project.html
+++ b/templates/project.html
@@ -4,4 +4,4 @@
   {{ this.title }}
 {% endblock %}
 
-{# FIXME: Complete project page with code examples. #}
+{# FIXME: Setup redirect to the  project documentation. #}
