Rename component to more generic name.

--- a/templates/components/link.html
+++ b/templates/components/link.html
@@ -1,4 +1,4 @@
-{% macro navbar_item(url) %}
+{% macro link(url) %}
   <a class="no-underline text-gray-900 mr-4 font-semibold align-middle border-b-2 border-solid border-transparent hover:text-black hover:border-black"
      href="{{ url }}">
     {{ caller() }}
