--- a/templates/components/project-card.html
+++ b/templates/components/project-card.html
@@ -1,5 +1,4 @@
-{% from 'components/navbar-item.html' import navbar_item as link %}
-{# FIXME: Rename navbar-item to the generic component #}
+{% from 'components/link.html' import link %}
 
 {% macro project_card(project) %}
   <div class="py-4">
