--- a/templates/components/body.html
+++ b/templates/components/body.html
@@ -1,5 +1,5 @@
 {% macro body(args) %}
-  <div class="container mx-auto text py-4">
+  <div class="container mx-auto py-4">
     {{ caller() }}
   </div>
 {% endmacro %}
