--- a/templates/components/welcome/intro.html
+++ b/templates/components/welcome/intro.html
@@ -1,7 +1,7 @@
 {% from 'components/button.html' import button %}
 
 {% macro intro(page) %}
-  <div class="mx-auto text-center py-24 container header-container">
+  <div class="mx-auto text-center py-24 container">
     <h1 class="text-4xl mb-4">{{ page.title }}</h1>
     <h2 class="text-xl font-normal mb-3">{{ page.description|safe }}</h2>
     <div class="container flex justify-center py-4">
