--- a/slides/ddd-toolkit.pug
+++ b/slides/ddd-toolkit.pug
@@ -15,6 +15,8 @@ html
           h2 Domain Driven Design Toolkit
           h4
             a(href="https://github.com/proofit404") Artem Malyshev
+          h6
+            a(href="https://twitter.com/proofit404") @proofit404
         section
           h2 BIO
           ul
