Add repositories layout.

--- a/slides/ddd-toolkit-2.pug
+++ b/slides/ddd-toolkit-2.pug
@@ -240,6 +240,20 @@ html
           img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/mappers.png").plain
           p Declarative mappers from ORM models to domain entities. And back again!
         section
+          h2 Layout
+          pre
+            code.
+              project
+              ├── admin
+              ├── aggregates
+              ├── forms
+              ├── migrations
+              ├── models
+              ├── #[b repositories]
+              ├── services
+              ├── templates
+              └── views
+        section
           h2 Django ORM
           pre
             code.python.
