Add dependencies slide.

--- a/slides/ddd-toolkit-2.pug
+++ b/slides/ddd-toolkit-2.pug
@@ -337,6 +337,10 @@ html
                   Purchase.trigger_message.assert_called_once_with(
                       UserStream(User(primary_key=1))
                   )
+        section
+          img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/dependencies.png").plain
+          p Provide composition instead of inheritance.
+          p Solves top-down approach problem.
         section(data-background-image=require("./pics/keep-calm-and-ddd.png") data-background-size="contain" data-background-color="#C10C06")
         section
           h2 Get in touch
