Add injections layout.

--- a/slides/ddd-toolkit-2.pug
+++ b/slides/ddd-toolkit-2.pug
@@ -341,6 +341,21 @@ html
           img(src="https://raw.githubusercontent.com/dry-python/brand/master/logo/dependencies.png").plain
           p Provide composition instead of inheritance.
           p Solves top-down approach problem.
+        section
+          h2 Layout
+          pre
+            code.
+              project
+              ├── admin
+              ├── aggregates
+              ├── forms
+              ├── migrations
+              ├── models
+              ├── repositories
+              ├── services
+              ├── templates
+              ├── #[b implementation]
+              └── views
         section(data-background-image=require("./pics/keep-calm-and-ddd.png") data-background-size="contain" data-background-color="#C10C06")
         section
           h2 Get in touch
