--- a/slides/ddd-toolkit-2.pug
+++ b/slides/ddd-toolkit-2.pug
@@ -28,6 +28,15 @@ html
         section(data-background-image=require("./pics/startup-process.png") data-background-size="contain" data-background-color="#2E677B")
         section(data-background-image=require("./pics/long-function.jpg") data-background-size="contain")
         section
+          h2 pros
+          ol
+            li.fragment Relatively easy to read
+          h2.fragment cons
+          ol
+            li.fragment Really hard to change
+            li.fragment We can not see the whole picture
+        section(data-background-image=require("./pics/trello-issue.png") data-background-size="contain" data-background-color="#002B45")
+        section
           h2 Implicit API
           pre
             code.python.
@@ -42,6 +51,16 @@ html
           ol
             li.fragment What exactly does this class do?
             li.fragment How to use it?
+        section
+          h2 pros
+          ol
+            li.fragment Relatively easy to change
+          h2.fragment cons
+          ol
+            li.fragment Really hard to read
+            li.fragment You should keep in mind framework rules
+            li.fragment Implicit knowledge grow
+            li.fragment We still can not see the whole picture
         section
           h2 Complexity
           p.fragment #[b Accidental complexity] refers to challenges that developers unintentionally make for themselves as a result of trying to solve a problem.
