Add Ably logo slide.

--- a/slides/ddd-toolkit-2.pug
+++ b/slides/ddd-toolkit-2.pug
@@ -340,6 +340,8 @@ html
                       "private-user-1"
                   )
         section
+          img(src=require("./pics/ably.png")).plain
+        section
           h2 How to use it with DI
           pre
             code.python.
